[package]
name = "print-prep"
version = "0.1.0"
authors = ["m-lange <martin_lange_@gmx.net>"]
edition = "2018"

[[bin]]
name = "pprep"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
imageproc = "0.20.0"
glob = "0.3"
dont_disappear = "3.0.1"
path-absolutize = "1.0.2"
structopt = {version = "0.3", features = ["wrap_help"]}
indicatif = "0.14.0"
rayon = "1.3.0"
lazy_static = "1.4.0"
