[package]
name = "print-prep"
version = "0.2.1"
authors = ["m-lange <martin_lange_@gmx.net>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false

[[bin]]
name = "pprep"
path = "src/main.rs"

[dependencies]
image = "0.23"
imageproc = "0.20.0"
glob = "0.3"
dont_disappear = "3.0.1"
path-absolutize = "1.0.2"
structopt = {version = "0.3", features = ["wrap_help"]}
indicatif = "0.14.0"
rayon = "1.3.0"
kamadak-exif = "0.5"
lazy_static = "1.4.0"
rusttype = "0.8.2"
rust-embed = "5.5.1"
